fudanbot_ws/log/build_2024-12-12_11-53-23/modbus_driver/stderr.log
  File "/home/desu/fudanbot_ws/install/modbus_driver/lib/python3.10/site-packages/modbus_driver/RS485_node.py", line 25
    def encInnit(self, instrument)
                                  ^
SyntaxError: expected ':'

